Добавил эндпоинт вывода товаров по категории, питомцу и фильтрам
